# ComfyUI-Model-Bending

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  bending_modules.py  bendutils.py  model_bending_nodes.py  nodes.py  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-pipeline.yml
js/: bend.js
py/: bending_modules.py  bendutils.py  custom_code_module.py
scripts/: README.md  analyze_bending_impact.py  build_offline_explorer.py  compute_metrics.py  export_experiments.py  run_bending_experiments.py  run_experiments.bat  serve_explorer_standalone.py  test_web_bend_1.json  test_web_bend_2.json
web/: LICENSE  README.md  explorer.html  index.html  model_bending_inspector.js  package-lock.json  package.json  web_bend_demo.js
web/js/: config.js  image-manager.js  main.js  svg-connector.js  unet-visualizer.js  utils.js  viewcomfyapi.js
web/style/: styles.css
workflows/: PCA_HSpace_bending.json  advanced_unet_bending.json  basic_unet_bending.json  conditioning_bending.json  denoising_step_bending.json  feature_map_viz.json  fine_control_unet_bending.json  interactive_bending.json  lora_bending.json  stream_diff_bending.json  vae_bending.json
