[project]
name = "ComfyUI-Model-Bending"
version = "0.0.5"
description = "Use model bending to push your model beyond its visuals limits. These nodes allow you to apply transformations to the intemediate densoising steps during sampling, e.g. add, multiplty, scale, rotate, dilate, erode ..etc."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = []
dependencies = ["kornia"]

[project.urls]
Repository = "https://github.com/abuzreq/ComfyUI-Model-Bending"
bugs = "https://github.com/abuzreq/ComfyUI-Model-Bending/issues"

[tool.comfy]
PublisherId = "abuzreq"
DisplayName = "ComfyUI Model Bending"
Icon = ""

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

