[project]
name = "ComfyUI-Model-Bending"
version = "0.1.0"
description = "Use model bending to push your model beyond its visuals limits. These nodes allow you to manipulate the inner weights of models (e.g., UNet, VAE) or interject the denoising process with operations like add, multiplty, scale, rotate, dilate, erode ..etc."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = []
dependencies = ["kornia", "scikit-learn"]

[project.urls]
Repository = "https://github.com/abuzreq/ComfyUI-Model-Bending"
bugs = "https://github.com/abuzreq/ComfyUI-Model-Bending/issues"

[tool.comfy]
PublisherId = "abuzreq"
DisplayName = "ComfyUI Model Bending"
Icon = ""

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

