[project]
name = "ComfyUI-Model-Bending"
version = "0.2"
description = "Use model bending to push your model beyond its visuals limits. These nodes allow you to interactivly manipulate the low-level activations of models (e.g., UNet, VAE, LoRAs) to create creative variations that are hard to achieve with other methods"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = []
dependencies = ["kornia", "scikit-learn"]

[project.urls]
Repository = "https://github.com/abuzreq/ComfyUI-Model-Bending"
bugs = "https://github.com/abuzreq/ComfyUI-Model-Bending/issues"

[tool.comfy]
PublisherId = "abuzreq"
DisplayName = "ComfyUI Model Bending"
Icon = ""

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

